--- a/src/main/resources/templates/allMessage/AllMessage.html
+++ b/src/main/resources/templates/allMessage/AllMessage.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>全部信息</title>
     <script src="../../static/plugins/jQuery/jquery-2.2.3.min.js"></script>
     <link rel="stylesheet" href="../../static/plugins/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../static/plugins/adminLTE/css/AdminLTE.css">
